--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn build && node lib/index.js",
-    "build": "rimraf lib && tsc"
+    "build": "rimraf lib && tsc",
+    "example-all-strategies": "ts-node ./tests/allStrategies.ts",
+    "example-all-images": "ts-node ./tests/allImages.ts"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/pngjs": "^6.0.1",
     "rimraf": "^4.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
