--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "author": "Szymon Wiszczuk <golota60@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build && node lib/index.js",
-    "build": "rimraf lib && tsc",
+    "start": "yarn build && node dist/index.js",
+    "build": "tsup",
     "example-all-strategies": "ts-node ./tests/allStrategies.ts",
     "example-all-images": "ts-node ./tests/allImages.ts"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/pngjs": "^6.0.1",
-    "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "pngjs": "^7.0.0"
+    "pngjs": "^7.0.0",
+    "tsup": "^6.7.0"
   }
 }
